--- a/src/Assignment-3/assignment3.css
+++ b/src/Assignment-3/assignment3.css
@@ -5,3 +5,46 @@
 width: 100%;
 height: 100%;
 }
+.box, .box2{
+    background-color: #F2F2F2;
+    padding: 50px;
+    margin-top: 20px;
+}
+.left{
+    display: inline-block;
+    width: 30%;
+    height: 300px;
+    margin-left: 100px;
+    text-align: left;
+    font-size: 20px;
+    vertical-align: top;
+}
+.right{
+    display: inline-block;
+    width: 50%;
+    margin-top: 10px;
+    margin-left: 100px;
+}
+iframe{
+    width: 100%;
+    height: 350px;
+    overflow: scroll;
+
+}
+button{
+    background-color: black;
+    color: white;
+    padding: 14px 40px;
+    transition-duration: 0.3s;
+}
+button:hover{
+    background-color: gray;
+}
+.upper{
+    text-align: center;
+    font-size: 20px;
+    vertical-align: top;
+}
+.lower{
+    margin-top: 20px;
+}
